# ble-projects

./: .gitignore  Makefile  README.md
docs/: rover-analysis.md  setup.md
docs/knowledge/: nrf52840-pca9685-wiring.md
projects/hello_nrf52840/: CMakeLists.txt  prj.conf
projects/hello_nrf52840/src/: main.c
projects/hexapod/: README.md
projects/hexapod/config/: actuators.yaml  body_geometry.yaml  collisions.yaml
projects/hexapod/docs/: collisions.md  joints.md  robot-overview.md
projects/hexapod/docs/handbook/: 01_Introduction.md  02_Basic_Motion.md  03_Posture.md  (+15 more)
projects/spider/: CMakeLists.txt  Makefile  README.md  prj.conf
projects/spider-remote-ios/: README.md
projects/spider-remote-ios/SpiderRemote/: Info.plist
projects/spider-remote-ios/SpiderRemote.xcodeproj/: project.pbxproj
projects/spider-remote-ios/docs/: ios-getting-started.md
projects/spider/boards/: nrf52840dk_nrf52840.overlay  xiao_ble.conf  xiao_ble.overlay  xiao_ble_nrf52840_sense.conf  xiao_ble_nrf52840_sense.overlay
projects/spider/docs/: architecture.md  ble-remote-design.md  kame-motion-framework.md  kame-servo-calibration.md  operations-guide.md  progress.md
projects/spider/include/: ble_remote.h  kame_motion.h  kame_pose.h  kame_servo_cal.h  spider_ble_protocol.h  spider_control.h  spider_servo.h
projects/spider/src/: ble_remote.c  kame_motion.c  kame_pose.c  kame_servo_cal.c  main.c  spider_control.c  spider_servo.c
scripts/: env.sh  fix_venv_paths.sh  project.mk  setup_env.sh
templates/nrf52840_app/: CMakeLists.txt  README.md
templates/nrf52840_app/src/: main.c
(+8 files in other folders)
